--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: BY Blog
-SEOTitle: 覃敏卓的博客 | BY Blog
+title: 未至之境
+SEOTitle: 覃敏卓的博客 | Qin Blog
 header-img: img/post-bg-desk.jpg
-email: qiubaiying@gmail.com
-description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
-url: "http://qiubaiying.github.io"          # your host, for absolute URL
+email: 1127405519@qq.com
+description: "　Common sense is the collection of prejudices acquired by age eighteen."
+keyword: "qin,mz"
+url: "https://qin1896.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
 
